tests/paczka1/fuzzy1/79527405.err
Error in line 1: R4Py19e S948 18,0
Error in line 8: HWHTG S65 85,5
Error in line 14: RE6nb S65 95,1
Error in line 15: RE6nb A655 51,7
Error in line 10: HWHTG A655 62,5
Error in line 13: K0QMfEZ9YpO A655 36,5
Error in line 20: HWHTG A17 18,5
Error in line 18: RE6nb A17 43,3
Error in line 22: K0QMfEZ9YpO A17 13,2
Error in line 26: K0QMfEZ9YpO A655 95,4
Error in line 30: RE6nb A655 64,57
